src/objects/Reseau_Service__c.object
<CustomObject>
    <description>Objet de jonction (n to n) entre les réseaux et les services.</description>
    <fields>
        <fullName>ReferenceExterne__c</fullName>
        <externalId>true</externalId>
        <label>Réference Externe</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reseau__c</fullName>
        <label>Réseau</label>
        <referenceTo>Reseau__c</referenceTo>
        <relationshipLabel>Services associés à ce réseau</relationshipLabel>
        <relationshipName>Reseau_Service</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Réseaux auquels ce service est associé</relationshipLabel>
        <relationshipName>Reseau_Service</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Association Réseau Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <displayFormat>RES-{0000}</displayFormat>
        <label>Numéro de Réseau Service</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associations Réseaux Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>